# nexaflow

./: .gitignore
backend/: pyproject.toml
backend/qdrant_storage/: meta.json
backend/qdrant_storage/collection/nexaflow_leads/: storage.sqlite
backend/src/: main.py  reset_db.py  settings.py  test_leads_direct.py  test_nexa_ai.py
backend/src/migrations/: migrations.py  seeders.py
backend/src/repositories/: database.py  repositories.py  schemas.py
backend/src/routes/: routes.py
backend/src/services/: celery_app.py  nexa_ai_service.py  qdrant_service.py  services.py  tasks.py
backend/src/utils/: helpers.py  logger.py  rate_limiter.py
backend/src/utils/exceptions/: error_codes.py
database_schemas/: schema.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/pages/: NexaAiChat.jsx  NexaFlowCreateProject.jsx  NexaFlowDashboard.jsx  NexaFlowDocuments.jsx  NexaFlowFinance.jsx  NexaFlowLogin.jsx  NexaFlowProjects.jsx  NexaFlowTasks.jsx  NextFlowCommunication.jsx
