[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.1",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.29",
    "resend>=2.30.1",
    "openai>=1.0.0",
    "qdrant-client>=1.18.0",
    "celery>=5.3.6",
    "redis>=5.0.1",
    "requests>=2.31.0",
    "fastapi>=0.100.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "reportlab>=4.0.0",
    "pillow>=10.0.0",
    "uvicorn>=0.20.0",
]
